# CoreWar

./: Makefile  README.md  corewar  test
Assembler/: .42.s.swo  .42.s.swp  .Backward.s.swp  .Makefile.swp  .blobfile.cor.swp  42.cor  42.s  Backward.cor  Backward.s  Backward.sor  Makefile  a.out  asm  blobfile.cor  test.s  test_vim  testt.c
Assembler/include/: .asm.h.swm  .asm.h.swn  .asm.h.swo  .asm.h.swp  .assembler.h.swp  .op.h.swp  asm.h  op.h
Assembler/libft/: Makefile  auteur
Assembler/libft/include/: libft.h
Assembler/libft/src/: .ft_atoi.c.swp  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstjoin.c  ft_lstmap.c  ft_lstnew.c  ft_lstprint.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_replace.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  (+25 more)
Assembler/src/: .ft_write_bytes.c.swn  .ft_write_bytes.c.swo  .ft_write_bytes.c.swp  .lexical_analysis.c.swp  .syntax_analysis.c.swo  .syntax_analysis.c.swp  assembler.c  ft_write_bytes.c  lexical_analysis.c  op.c  syntax_analysis.c
VM/: .gitignore  Makefile  acto  acto.  blank.cor  blank.s  blank2.cor  blank2.s  bomberman.s  bugtest.cor  champs  cmp1  corewar  corewarrus  dif1  dif2  dif3  diff.py  errors  mok  octo  ourcore  script.py  store2.cor  store24.cor  test  test2  test2.cor  time  todo
VM/delete_files/: CMakeLists.txt  acto.cor  acto.s  acto2  blank.cor  blank.s  bomberman.cor  octo  pseudo_code.  storetest.cor  test  test1.cor
VM/include/: corewarh.h  op.h  visu.h
VM/libft/: Makefile
VM/libft/include/: libft.h
VM/libft/src/: ft_bi_add.c  ft_bi_mult.c
VM/op_cor/: test.cor
VM/src/: .ft_check_magic_headers.c.swp  ft_arena_cpy.c  ft_arg_size.c  ft_battlegrounds.c  ft_check_arg_validity.c  ft_check_cor_extension.c  ft_check_magic_headers.c  ft_check_registries.c  ft_copy_arena.c  ft_count_champions.c  ft_count_dodge_bytes.c  ft_create_champions.c  ft_create_initial_processes.c  ft_dodge_bytes.c  ft_duplicate_process.c  ft_euclidean_mod.c  ft_execute_addition.c  ft_execute_aff.c  ft_execute_and.c  ft_execute_fork.c  ft_execute_hq.c  ft_execute_jump_if_zero.c  ft_execute_live.c  ft_execute_load.c  ft_execute_load_index.c  ft_execute_long_fork.c  ft_execute_long_load.c  ft_execute_long_load_index.c  ft_execute_or.c  ft_execute_store.c  ft_execute_store_index.c  ft_execute_substraction.c  ft_execute_xor.c  ft_extract_argument_dir_long.c  ft_extract_argument_dir_short.c  ft_extract_argument_ind.c  ft_fill_arena.c  ft_fill_champions.c  ft_free_data.c  ft_gather_byte_code.c  (+16 more)
VM/vm_champs/: bat.cor  bat.s  god.cor  god.s  live1ld.cor  test.cor  test.s  test1.cor  test1.s  zork.cor
scripts/: check_vm.sh  dif1  dif2  file  ourcore  readme  tfile
