cmake_minimum_required(VERSION 3.15)
project(VM C)

set(CMAKE_C_STANDARD 11)

include_directories(include)
include_directories(libft/include)

add_executable(VM
        include/corewarh.h
        include/op.h
        libft/include/libft.h
        libft/include/printfh.h
        libft/src/ft_abs.c
        libft/src/ft_arylen.c
        libft/src/ft_atoi.c
        libft/src/ft_atoi_base.c
        libft/src/ft_bi_add.c
        libft/src/ft_bi_mult.c
        libft/src/ft_bi_rep.c
        libft/src/ft_bzero.c
        libft/src/ft_chareplace.c
        libft/src/ft_check_neg.c
        libft/src/ft_cnv_hex.c
        libft/src/ft_cnv_hex_u.c
        libft/src/ft_construct_s.c
        libft/src/ft_countlst.c
        libft/src/ft_craadd.c
        libft/src/ft_cstrlen.c
        libft/src/ft_div_one.c
        libft/src/ft_dreplace.c
        libft/src/ft_field_width.c
        libft/src/ft_finish_fract.c
        libft/src/ft_flagge_rino.c
        libft/src/ft_frexp.c
        libft/src/ft_fw_left.c
        libft/src/ft_fw_right.c
        libft/src/ft_isalnum.c
        libft/src/ft_isalpha.c
        libft/src/ft_isascii.c
        libft/src/ft_isdigit.c
        libft/src/ft_isprint.c
        libft/src/ft_itoa.c
        libft/src/ft_itoa_imp.c
        libft/src/ft_itoa_imp_u.c
        libft/src/ft_lstadd.c
        libft/src/ft_lstdel.c
        libft/src/ft_lstdelone.c
        libft/src/ft_lstiter.c
        libft/src/ft_lstmap.c
        libft/src/ft_lstnew.c
        libft/src/ft_make_ldouble.c
        libft/src/ft_make_s.c
        libft/src/ft_memalloc.c
        libft/src/ft_memccpy.c
        libft/src/ft_memchr.c
        libft/src/ft_memcmp.c
        libft/src/ft_memcpy.c
        libft/src/ft_memdel.c
        libft/src/ft_memmove.c
        libft/src/ft_memset.c
        libft/src/ft_normalize.c
        libft/src/ft_plstcont.c
        libft/src/ft_precision.c
        libft/src/ft_print_adressp.c
        libft/src/ft_print_bonus.c
        libft/src/ft_print_char.c
        libft/src/ft_print_float.c
        libft/src/ft_print_grbg.c
        libft/src/ft_print_int.c
        libft/src/ft_print_octal.c
        libft/src/ft_print_percent.c
        libft/src/ft_print_str.c
        libft/src/ft_print_uns_hex_low.c
        libft/src/ft_print_uns_hex_up.c
        libft/src/ft_print_unsigned.c
        libft/src/ft_printf.c
        libft/src/ft_putchar.c
        libft/src/ft_putchar_fd.c
        libft/src/ft_putchar_rem.c
        libft/src/ft_putendl.c
        libft/src/ft_putendl_fd.c
        libft/src/ft_putnbr.c
        libft/src/ft_putnbr_fd.c
        libft/src/ft_putstr.c
        libft/src/ft_putstr_fd.c
        libft/src/ft_putstr_imp_fd.c
        libft/src/ft_putstr_rem.c
        libft/src/ft_round_it.c
        libft/src/ft_scan_flag.c
        libft/src/ft_simpleop.c
        libft/src/ft_skip_line.c
        libft/src/ft_special_n.c
        libft/src/ft_strcat.c
        libft/src/ft_strccpy.c
        libft/src/ft_strchr.c
        libft/src/ft_strclr.c
        libft/src/ft_strcmp.c
        libft/src/ft_strcpy.c
        libft/src/ft_strcpyc.c
        libft/src/ft_strdel.c
        libft/src/ft_strdup.c
        libft/src/ft_strequ.c
        libft/src/ft_striter.c
        libft/src/ft_striteri.c
        libft/src/ft_strjoin.c
        libft/src/ft_strlcat.c
        libft/src/ft_strlen.c
        libft/src/ft_strlenc.c
        libft/src/ft_strmap.c
        libft/src/ft_strmapi.c
        libft/src/ft_strncat.c
        libft/src/ft_strncmp.c
        libft/src/ft_strncpy.c
        libft/src/ft_strndup.c
        libft/src/ft_strnequ.c
        libft/src/ft_strnew.c
        libft/src/ft_strnstr.c
        libft/src/ft_strpos.c
        libft/src/ft_strrchr.c
        libft/src/ft_strsplit.c
        libft/src/ft_strstr.c
        libft/src/ft_strsub.c
        libft/src/ft_strsubn.c
        libft/src/ft_strtrim.c
        libft/src/ft_swpdress.c
        libft/src/ft_to_bi.c
        libft/src/ft_tolower.c
        libft/src/ft_toupper.c
        libft/src/ft_zero_scp.c
        libft/src/get_next_line.c
        src/ft_check_cor_extension.c
        src/ft_check_magic_headers.c
        src/ft_count_champions.c
        src/ft_create_champions.c
        src/ft_dodge_bytes.c
        src/ft_fill_champions.c
        src/ft_free_data.c
        src/ft_gather_byte_code.c
        src/ft_gather_champion_data.c
        src/ft_manage_error.c
        src/main.c)
